--- a/Cric App/style_basic.css
+++ b/Cric App/style_basic.css
@@ -1,3 +1,16 @@
+#tbl-details{
+  width: 100%;
+}
+
+.modal-sub-heading{
+  background: #232882;
+  color:white;
+}
+
+.modal-header{
+  padding: 0px;
+}
+
 .heading-versus{
     width: 20px;
 }
@@ -16,7 +29,7 @@
 }
 
 .compartment{
-    text-align: center;border: solid white 10px; height:650px;
+    text-align: center;border: solid white 10px; height:100%;
  }
  
  body{
@@ -82,9 +95,14 @@ table {
     padding: 2px 0 0 4px;
 }
 
+.cell-predict {  
+  border: 1px solid black;  
+  font-size: 1.5em;
+}
+
 .cell-won {
     background-color: #4CAF50;
-    border: none;
+    border: 2px solid white;
     color: white;
     text-align: center;
     font-size: 1.5em;
@@ -92,15 +110,15 @@ table {
 
 .cell-draw {
     background-color: rgb(186, 199, 74);
-    border: none;
+    border: 2px solid white;
     color: white;
     text-align: center;
     font-size: 1.5em;
 }
 
-.cell-lost {
+.cell-lost {    
     background-color: #ff1e50;
-    border: none;
+    border: 2px solid white;
     color: white;
     text-align: center;
     font-size: 1.5em;
@@ -148,172 +166,6 @@ input[type=number]::-webkit-outer-spin-button {
    opacity: 1 !important;
 }
 
- /* footer css starts */
- .site-footer
-{
-  background-color:#26272b;
-  padding:45px 0 20px;
-  font-size:15px;
-  line-height:24px;
-  color:#737373;
-}
-.site-footer hr
-{
-  border-top-color:#bbb;
-  opacity:0.5
-}
-.site-footer hr.small
-{
-  margin:20px 0
-}
-.site-footer h6
-{
-  color:#fff;
-  font-size:16px;
-  text-transform:uppercase;
-  margin-top:5px;
-  letter-spacing:2px
-}
-.site-footer a
-{
-  color:#737373;
-}
-.site-footer a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
-}
-.footer-links
-{
-  padding-left:0;
-  list-style:none
-}
-.footer-links li
-{
-  display:block
-}
-.footer-links a
-{
-  color:#737373
-}
-.footer-links a:active,.footer-links a:focus,.footer-links a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
-}
-.footer-links.inline li
-{
-  display:inline-block
-}
-.site-footer .social-icons
-{
-  text-align:right
-}
-.site-footer .social-icons a
-{
-  width:40px;
-  height:40px;
-  line-height:40px;
-  margin-left:6px;
-  margin-right:0;
-  border-radius:100%;
-  background-color:#33353d
-}
-.copyright-text
-{
-  margin:0
-}
-@media (max-width:991px)
-{
-  .site-footer [class^=col-]
-  {
-    margin-bottom:30px
-  }
-}
-@media (max-width:767px)
-{
-  .site-footer
-  {
-    padding-bottom:0
-  }
-  .site-footer .copyright-text,.site-footer .social-icons
-  {
-    text-align:center
-  }
-}
-.social-icons
-{
-  padding-left:0;
-  margin-bottom:0;
-  list-style:none
-}
-.social-icons li
-{
-  display:inline-block;
-  margin-bottom:4px
-}
-.social-icons li.title
-{
-  margin-right:15px;
-  text-transform:uppercase;
-  color:#96a2b2;
-  font-weight:700;
-  font-size:13px
-}
-.social-icons a{
-  background-color:#eceeef;
-  color:#818a91;
-  font-size:16px;
-  display:inline-block;
-  line-height:44px;
-  width:44px;
-  height:44px;
-  text-align:center;
-  margin-right:8px;
-  border-radius:100%;
-  -webkit-transition:all .2s linear;
-  -o-transition:all .2s linear;
-  transition:all .2s linear
-}
-.social-icons a:active,.social-icons a:focus,.social-icons a:hover
-{
-  color:#fff;
-  background-color:#29aafe
-}
-.social-icons.size-sm a
-{
-  line-height:34px;
-  height:34px;
-  width:34px;
-  font-size:14px
-}
-.social-icons a.facebook:hover
-{
-  background-color:#3b5998
-}
-.social-icons a.twitter:hover
-{
-  background-color:#00aced
-}
-.social-icons a.linkedin:hover
-{
-  background-color:#007bb6
-}
-.social-icons a.dribbble:hover
-{
-  background-color:#ea4c89
-}
-@media (max-width:767px)
-{
-  .social-icons li.title
-  {
-    display:block;
-    margin-right:0;
-    font-weight:600
-  }
-}
- /* footer css ends */
-
  /*Cookie Consent Begin*/
 #cookieConsent {
     background-color: rgba(20,20,20,0.8);
@@ -334,8 +186,7 @@ input[type=number]::-webkit-outer-spin-button {
     color: #4B8EE7;
     text-decoration: none;
 }
-#closeCookieConsent {
-    float: right;
+#closeCookieConsent {    
     display: inline-block;
     cursor: pointer;
     height: 20px;
@@ -353,10 +204,51 @@ input[type=number]::-webkit-outer-spin-button {
     border-radius: 5px;
     padding: 0 20px;
     cursor: pointer;
-    float: right;
     margin: 0 60px 0 10px;
 }
 #cookieConsent a.cookieConsentOK:hover {
     background-color: #E0C91F;
 }
 /*Cookie Consent End*/
+
+
+select {
+  cursor: pointer;
+}
+
+.ddl{
+  height: 100%;
+  width: 100%;
+  font-size: 18px;
+  padding-left: 20%;
+  font-weight: 700;
+}
+
+.ddl-win{
+  color: #4caf50;
+}
+.ddl-draw{
+  color: #bac74a;
+}
+.ddl-loss{
+  color: #ff1e50;
+}
+
+.ddl-op-win{
+  background-color: #4caf50;
+  color:white;
+  height: 100px;
+}
+.ddl-op-draw{
+  background-color: #bac74a;
+  color:white;
+}
+.ddl-op-loss{
+  background-color: #ff1e50;
+  color:white;
+  border: 10px solid black;
+}
+
+button{
+  width: 100%;
+}
